--- a/roadmap_certs.html
+++ b/roadmap_certs.html
@@ -38,7 +38,7 @@
 
 
 
-<iframe class="roadmap" src="https://pauljerimy.com/security-certification-roadmap/" title="Paul Jeremy diagram" width="80%" height="500"> </iframe>
+<iframe class="roadmap" src="https://pauljerimy.com/security-certification-roadmap/" title="Paul Jeremy diagram" width="90%" height="500px"> </iframe>
 </div>
 
 </div> 
