--- a/roadmap_certs.html
+++ b/roadmap_certs.html
@@ -16,12 +16,11 @@
 
 	<nav>
 		<ul class="navbar-links">
-      <li class="nav-item"><a class="nav-link"  href="./">Home page</a></li></a></li>
-	  <li class="nav-item"><a class="nav-link"  href="./journey">My journey</a></li></a></li>
-      <li class="nav-item"><a class="nav-link"  href="./roadmap_certs">Roadmap/Certs</a></li></a></li>
-	  <li class="nav-item"><a class="nav-link"  href="./my_work">Projects</a></li></a></li>
+      <li class="nav-item"><a class="nav-link"  href="index.html">Home page</a></li></a></li>
+	  <li class="nav-item"><a class="nav-link"  href="journey.html">My journey</a></li></a></li>
+      <li class="nav-item"><a class="nav-link"  href="roadmap_certs.html">Roadmap/Certs</a></li></a></li>
+	  <li class="nav-item"><a class="nav-link"  href="my_work.html">Projects</a></li></a></li>
 
-	  </ul>
 	</nav>
 	
 	<a href="#" class="boton"><button>Contact</button></a>
@@ -31,16 +30,26 @@
 <body>
 <div class="container">
 
-<h2>Roadmap</h2>
+            <div class="title"><h5>Roadmaps and Certificate</h5></div>
+<!--<p>This roadmap diagram was created by Paul Jeremy. I stomped by it why I was reseaching about certificates 
+and its has been very usefull.</p>-->
+<p>This roadmap diagram was authored by Paul Jeremy. I encountered it while conducting research on cyber paths and certificates. 
+I found it to be highly valuable.</p>
+<!--<p> It's a very good ilustration of the most common sectors in cyber and thier certification.</p>-->
+<p>The diagram serves as an excellent visual representation of the prevailing sectors within the field of 
+cyber (networking, security, hacking)and their associated certifications.</p>
+<!--<p>Each certification website can be accessed by directly clicking on it for more information or to enroll.</p>-->
+<p>To obtain further information or enroll in any of the featured certifications, one may conveniently access the respective certification websites by simply clicking on them.
+</p>
 
-<p>This roadmap diagram was created by Paul Jeremy. I stomped by it why I was reseaching about certificates and its has been very usefull.</p>
-<p>You can access each certification site directly by clicking on to get more information o to enroll </p>
 
 
 
-<iframe class="roadmap" src="https://pauljerimy.com/security-certification-roadmap/" title="Paul Jeremy diagram" width="90%" height="500px"> </iframe>
+<iframe class="roadmap" src="https://pauljerimy.com/security-certification-roadmap/" title="Paul Jeremy diagram" width="100%" height="500px"> </iframe>
 </div>
 
 </div> 
 </body>
 </html>
+
+
