--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
 	<nav>
 		<ul class="navbar-links">
-      <li class="nav-item"><a class="nav-link"  href="./">Home page</a></li></a></li>
-	  <li class="nav-item"><a class="nav-link"  href="./journey">My journey</a></li></a></li>
-      <li class="nav-item"><a class="nav-link"  href="./roadmap_certs">Roadmap/Certs</a></li></a></li>
-	  <li class="nav-item"><a class="nav-link"  href="./my_work">Projects</a></li></a></li>
+      <li class="nav-item"><a class="nav-link"  href="index.html">Home page</a></li></a></li>
+      <li class="nav-item"><a class="nav-link"  href="journey.html">My journey</a></li></a></li>
+      <li class="nav-item"><a class="nav-link"  href="roadmap_certs.html">Roadmap/Certs</a></li></a></li>
+	  <li class="nav-item"><a class="nav-link"  href="my_work.html">Projects</a></li></a></li>
 
 	  </ul>
 	</nav>
